--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="color-scheme" content="dark light"><!--Мой код-->
   <title>Сложно сосредоточиться</title>
-  <link rel="stylesheet" href="./fonts/fonts.css"><!--Мой код-->
+  <link rel="stylesheet" href="./styles/globals.css"><!--Мой код-->
+  <link rel="stylesheet" href="./fonts/fonts.css">
   <link rel="stylesheet" href="./styles/variables.css">
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/dark.css">
   <link rel="stylesheet" href="./styles/light.css">
-  <link rel="stylesheet" href="./styles/globals.css">
   <link rel="icon" href="images/favicon.svg" type="images/svg+hml"><!--Мой код-->
   <script src="./scripts/script.js"></script>
 </head>
@@ -39,26 +39,26 @@
         </li>
       </ul>
     </nav>
-    <span class="rec" aria-hidden="true">rec</span>
-    <h1 class="title header-footer-text">no focus</h1><!--Мой код-->
-    <div class="description title-decor">
-      <p class="intro-text">Что делать, когда не можешь делать ничего</p>
-      <p class="intro-text">Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
+    <span class="header__rec" aria-hidden="true">rec</span>
+    <h1 class="header__title main-title">no focus</h1><!--Мой код-->
+    <div class="header__description title-decor">
+      <p class="title title_intro">Что делать, когда не можешь делать ничего</p>
+      <p class="title title_intro">Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
     </div>
   </header>
 
-  <main class="main">
-    <section class="section intro">
-      <h2 class="section-title">Почему сосредоточиться так сложно</h2>
-      <div class="section--intro">
-        <h3 class="sub-title title-decor">Многозадачность</h3>
+  <main class="content">
+    <section class="section section-intro">
+      <h2 class="block-title">Почему сосредоточиться так сложно</h2>
+      <div class="intro__block">
+        <h3 class="title title_sub title-decor">Многозадачность</h3>
         <p class="text">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная
           многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её
           просто не существует. Исследователи <a class="link" href="#">выяснили</a>, что мозгу тяжело концентрироваться
           даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и
           выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро
           устаём.</p>
-        <h3 class="sub-title title-decor">Дофамин</h3>
+        <h3 class="title title_sub title-decor">Дофамин</h3>
         <p class="text">С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности
           сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе
           вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для
@@ -67,25 +67,25 @@
       </div>
     </section>
 
-    <section class="section">
-      <h2 class="section-title">Что снижает концентрацию внимания?</h2>
-      <div class="base">
-        <div class="section--base">
-          <h3 class="sub-title title-decor">Многозадачность</h3>
+    <section class="section section-base">
+      <h2 class="block-title">Что снижает концентрацию внимания?</h2>
+      <div class="base__block">
+        <div class="base__card">
+          <h3 class="title title_sub title-decor">Многозадачность</h3>
           <p class="text">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко
             меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности.
             Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и
             она может не выдержать, если не давать ей отдохнуть.</p>
         </div>
-        <div class="section--base">
-          <h3 class="sub-title title-decor">Еда</h3>
+        <div class="base__card">
+          <h3 class="title title_sub title-decor">Еда</h3>
           <p class="text">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и
             помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем
             на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и
             сонливость. И хотим ещё больше быстрых углеводов.</p>
         </div>
-        <div class="section--base">
-          <h3 class="sub-title title-decor">Гаджеты</h3>
+        <div class="base__card">
+          <h3 class="title title_sub title-decor">Гаджеты</h3>
           <p class="text">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на
             компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи
             на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно
@@ -95,53 +95,53 @@
       </div>
     </section>
 
-    <section class="section conclusion">
-      <h2 class="section-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
-      <div class="section--conclusion">
-        <h3 class="sub-title title-block title-decor">5 простых (на самом деле не очень) советов</h3>
-        <h4 class="sub-heading title-decor">Представьте небо и облака</h4>
+    <section class="section section-conclusion">
+      <h2 class="block-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
+      <div class="conclusion__block">
+        <h3 class="title title_item title-decor">5 простых (на самом деле не очень) советов</h3>
+        <h4 class="title title_sub-heading title-decor">Представьте небо и облака</h4>
         <p class="text">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно
           тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть
           глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное
           небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий
           момент, а не волноваться о потенциальных проблемах из будущего.</p>
-        <h4 class="sub-heading title-decor">Включите музыку</h4>
+        <h4 class="title title_sub-heading title-decor">Включите музыку</h4>
         <p class="text">Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями,
           которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать
           включить плейлист с «белым шумом» или нейромузыкой.</p>
-        <h4 class="sub-heading title-decor">Прогуляйтесь</h4>
+        <h4 class="title title_sub-heading title-decor">Прогуляйтесь</h4>
         <p class="text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a class="link"
             href="#">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских
           пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг
           поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже
           отличный вариант.</p>
-        <h4 class="sub-heading title-decor">Хорошо ешьте</h4>
+        <h4 class="title title_sub-heading title-decor">Хорошо ешьте</h4>
         <p class="text">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким
           скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица,
           фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
-        <h4 class="sub-heading title-decor">Читайте</h4>
+        <h4 class="title title_sub-heading title-decor">Читайте</h4>
         <p class="text">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети,
           достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и
           круто тренирует направленное внимание.</p>
       </div>
     </section>
+
+    <section class="content-gallery">
+      <h3 class="title title_gallery title-decor">А можно в картинках?</h3>
+      <div class="content-gallery__images-container">
+        <img src="./images/sunset.png" alt="Закат" class="content-gallery__images images images-sunset" loading="lazy">
+        <img src="./images/ice-cream.png" alt="Милое мороженое" class="content-gallery__images images images-ice-crem"
+          loading="lazy">
+        <img src="./images/tape.png" alt="Касета" class="content-gallery__images images images-tape" loading="lazy">
+        <img src="./images/books.png" alt="Стопка книг с кружкой чая сверху"
+          class="content-gallery__images images images-books" loading="lazy">
+        <img src="./images/street.png" alt="Улица" class="content-gallery__images images images-street" loading="lazy">
+      </div>
+    </section>
   </main>
 
-  <section class="content content-gallery">
-    <h3 class="sub-title title-decor sub-text">А можно в картинках?</h3>
-    <div class="images-container">
-      <img src="./images/sunset.png" alt="Закат" class="images images-sunset" loading="lazy">
-      <img src="./images/ice-cream.png" alt="Милое мороженое" class="images images-ice-crem" loading="lazy">
-      <img src="./images/tape.png" alt="Касета" class="images images-tape" loading="lazy">
-      <img src="./images/books.png" alt="Стопка книг с кружкой чая сверху" class="images images-books" loading="lazy">
-      <img src="./images/street.png" alt="Улица" class="images images-street" loading="lazy">
-    </div>
-  </section>
-
-  <footer class="footer  header-footer-text">
-    <div class="footer-content">
-      <h2 class="footer-title">focus</h2>
-    </div>
+  <footer class="footer decorated-zone">
+    <h2 class="footer__title main-title">focus</h2>
   </footer>
 </body>
 
