--- a/index.html
+++ b/index.html
@@ -40,10 +40,14 @@
       </ul>
     </nav>
     <span class="header__rec" aria-hidden="true">rec</span>
-    <h1 class="header__title main-title">no focus</h1><!--Мой код-->
-    <div class="header__description title-decor">
-      <p class="title title_intro">Что делать, когда не можешь делать ничего</p>
-      <p class="title title_intro">Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
+    <div class="container__title">
+      <h1 class="header__title main-title">no focus</h1><!--Мой код-->
+    </div>
+    <div class="container__description">
+      <div class="header__description title-decor">
+        <p class="title title_intro">Что делать, когда не можешь делать ничего</p>
+        <p class="title title_intro">Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
+      </div>
     </div>
   </header>
 
@@ -98,7 +102,7 @@
     <section class="section section-conclusion">
       <h2 class="block-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
       <div class="conclusion__block">
-        <h3 class="title title_item title-decor">5 простых (на самом деле не очень) советов</h3>
+        <h3 class="title title_sub title_item title-decor">5 простых (на самом деле не очень) советов</h3>
         <h4 class="title title_sub-heading title-decor">Представьте небо и облака</h4>
         <p class="text">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно
           тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть
@@ -127,7 +131,7 @@
     </section>
 
     <section class="content-gallery">
-      <h3 class="title title_gallery title-decor">А можно в картинках?</h3>
+      <h3 class="title title_sub title_gallery title-decor">А можно в картинках?</h3>
       <div class="content-gallery__images-container">
         <img src="./images/sunset.png" alt="Закат" class="content-gallery__images images images-sunset" loading="lazy">
         <img src="./images/ice-cream.png" alt="Милое мороженое" class="content-gallery__images images images-ice-crem"
